--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <!-- Script Jquery -->
     <script src="index.js"></script>
 
+    <!-- Script CSS -->
     <link rel="stylesheet" href="style.css">
 
 </head>
