--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
         <div class="col-6 mx-auto">
             <p>&nbsp;=> Usando Jquery :</p>
             <h5 id="texto"><b>Elegir una opción !</b></h5>
-            <img src="img/0.jpg" alt="img" class="img" id="imagen">
+            <a href="#" id="verImg">
+                <img src="img/0.jpg" alt="img" class="img" id="imagen">
+            </a>
         </div>
     </div>
     <br>
