--- a/home.html
+++ b/home.html
@@ -1,20 +1,68 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <title>Title</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+     <!-- Required meta tags -->
+     <meta charset="utf-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+ 
+     <!-- Bootstrap CSS v5.2.0-beta1 -->
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+ 
+     <!-- Bootstrap JavaScript Libraries -->
+     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
+         integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
+         crossorigin="anonymous"></script>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"
+         integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
+         crossorigin="anonymous"></script>
+ 
+     <!-- jquery -->
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-    <!-- Bootstrap CSS v5.2.0-beta1 -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"  integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-
+ 
+     <!-- Script CSS -->
+     <link rel="stylesheet" href="style.css">
+     
   </head>
-  <body>
-      
-    <!-- Bootstrap JavaScript Libraries -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
+  <body class="container">
+    <div class="row mt-5">
+      <div class="col-6">
+        <img src="" alt="" class="img" id="imagen">
+      </div>
+      <div class="col-6">
+        <p><b>Description : </b><span id="description"></span></p>
+        <hr>
+        <p><b>Color : </b><span id="color"></span></p>
+        <hr>
+        <p><b>Price u$s : </b><span id="price"></span></p>
+      </div>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col-12">
+        <a href="file:///Users/fernando/Desktop/directos/node/index.html" class="btn btn-info">Volver</a>
+      </div>
+    </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
+    <script>
+      $(document).ready(function(){
+        const URL = 'http://localhost:3000/autos';
+
+        let params = new URLSearchParams(location.search);
+        var id = params.get('id');
+        $('#imagen').attr('src', `img/${id}.jpg`);
+        ( async () => {
+            const response = await fetch(URL+'/'+id);
+            const auto = await response.json();
+            $('#description').html(auto[0].description);
+            $('#color').html(auto[0].color);
+            $('#price').html(auto[0].price);
+        })();
+      })
+    </script>
+  
+  
   </body>
 </html>
