--- a/home.html
+++ b/home.html
@@ -24,6 +24,9 @@
  
      <!-- Script CSS -->
      <link rel="stylesheet" href="style.css">
+
+
+    <script src="home.js"></script>
      
   </head>
   <body class="container">
@@ -45,24 +48,6 @@
         <a href="file:///Users/fernando/Desktop/directos/node/index.html" class="btn btn-info">Volver</a>
       </div>
     </div>
-
-    <script>
-      $(document).ready(function(){
-        const URL = 'http://localhost:3000/autos';
-
-        let params = new URLSearchParams(location.search);
-        var id = params.get('id');
-        $('#imagen').attr('src', `img/${id}.jpg`);
-        ( async () => {
-            const response = await fetch(URL+'/'+id);
-            const auto = await response.json();
-            $('#description').html(auto[0].description);
-            $('#color').html(auto[0].color);
-            $('#price').html(auto[0].price);
-        })();
-      })
-    </script>
-  
-  
+ 
   </body>
 </html>
