--- a/home.html
+++ b/home.html
@@ -35,6 +35,8 @@
         <img src="" alt="" class="img" id="imagen">
       </div>
       <div class="col-6">
+        <h4>DATOS :</h4>
+        <hr>
         <p><b>Description : </b><span id="description"></span></p>
         <hr>
         <p><b>Color : </b><span id="color"></span></p>
