--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
      <link rel="stylesheet" href="style.css">
 
 
-    <script src="home.js"></script>
+    <script src="js/home.js"></script>
      
   </head>
   <body class="container">
