--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
     <!-- Script Jquery -->
-    <script src="index.js"></script>
+    <script src="js/index.js"></script>
 
     <!-- Script CSS -->
     <link rel="stylesheet" href="style.css">
