--- a/home.html
+++ b/home.html
@@ -1,62 +1,78 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
   <head>
     <title>Autos</title>
-     <!-- Required meta tags -->
-     <meta charset="utf-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
- 
-     <!-- Bootstrap CSS v5.2.0-beta1 -->
-     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
- 
-     <!-- Bootstrap JavaScript Libraries -->
-     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
-         integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
-         crossorigin="anonymous"></script>
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"
-         integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
-         crossorigin="anonymous"></script>
- 
-     <!-- jquery -->
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
- 
-     <!-- Script CSS -->
-     <link rel="stylesheet" href="style.css">
+    <!-- Bootstrap CSS v5.2.0-beta1 -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
 
+    <!-- Bootstrap JavaScript Libraries -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
+      integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"
+      integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+    <!-- Script CSS -->
+    <link rel="stylesheet" href="style.css" />
 
     <script src="js/home.js"></script>
-     
   </head>
   <body class="container">
-    <div class="row mt-5">
+    <div class="row mt-5" id="auto">
       <div class="col-6">
-        <img src="" alt="" class="img" id="imagen">
+        <img src="" alt="" class="img" id="imagen" />
       </div>
       <div class="col-6">
         <h6>DATOS :</h6>
-        <hr>
+        <hr />
         <form id="form">
-          <b>Trademark : </b><input class="form-control my-2" name="name" id="name">
-          <b>Description : </b><input class="form-control my-2" name="description" id="description">
-          <b>Color : </b><input class="form-control my-2" name="color" id="color">
-          <b>Price u$s : </b><input class="form-control my-2" name="price" id="price">
+          <b>Trademark : </b
+          ><input class="form-control my-2" name="name" id="name" />
+          <b>Description : </b
+          ><input
+            class="form-control my-2"
+            name="description"
+            id="description"
+          />
+          <b>Color : </b
+          ><input class="form-control my-2" name="color" id="color" />
+          <b>Price u$s : </b
+          ><input class="form-control my-2" name="price" id="price" />
         </form>
-          <div class="row mt-5">
-            <div class="col-12 text-center">
-              <button class="btn btn-primary" id="btnUpdate">Update</button>&nbsp;&nbsp;
-              <button class="btn btn-danger" id="btnDelete">Delete</button>
-            </div>
+        <div class="row mt-5">
+          <div class="col-12 text-center">
+            <button class="btn btn-primary" id="btnUpdate">Update</button
+            >&nbsp;&nbsp;
+            <button class="btn btn-danger" id="btnDelete">Delete</button>
           </div>
+        </div>
       </div>
     </div>
-    <br>
-    <div class="row">
+    <br />
+    <div class="row mt-5">
       <div class="col-12">
         <a href="index.html" class="btn btn-danger">Back</a>
       </div>
     </div>
- 
   </body>
 </html>
