Se cambiarion la forma de mostrar que no hay resultados en la busqueda

--- a/home.html
+++ b/home.html
@@ -39,11 +39,11 @@
   </head>
   <body class="container">
     <div class="row mt-5" id="auto">
-      <div class="col-6">
+      <div class="col-5">
         <img src="" alt="" class="img" id="imagen" />
       </div>
-      <div class="col-6">
-        <h6>DATOS :</h6>
+      <div class="col-7">
+        <h4>DATOS :</h4>
         <hr />
         <form id="form">
           <b>Trademark : </b
@@ -71,7 +71,7 @@
     <br />
     <div class="row mt-5">
       <div class="col-12">
-        <a href="index.html" class="btn btn-danger">Back</a>
+        <a href="index.html" class="btn btn-secondary">Back</a>
       </div>
     </div>
   </body>
