--- a/index.html
+++ b/index.html
@@ -35,9 +35,12 @@
 
 <body class="container">
     <div class="row mt-5">
-        <div class="col-6 mx-auto">
-            <p>&nbsp;=> Usando Jquery :</p>
-            <h5 id="texto"><b>Elegir una opción !</b></h5>
+        <div class="col-5 mx-auto">
+            <div class="text-center mt-2 mb-2">
+                <h2>Autos</h2>
+            </div>
+            <hr>
+            <h6 id="texto"><b>Elegir una Opción !</b></h6>
             <a href="#" id="verImg">
                 <img src="img/0.jpg" alt="img" class="img" id="imagen">
             </a>
@@ -52,9 +55,9 @@
         </div>
     </div>
     <div class="row mt-5">
-        <div class="col-6 mx-auto">
-            &nbsp;<button class="btn btn-secondary" id="botonNew">New</button>
-            &nbsp;<button class="btn btn-primary" id="boton">View</button>
+        <div class="col-6 mx-auto text-center mb-5">
+            &nbsp;<button class="btn btn-primary" id="botonNew">New</button>
+            &nbsp;<button class="btn btn-info" id="boton">View</button>
             &nbsp;<button class="btn btn-danger" id="botonReset">Reset</button>
         </div>
     </div>
