--- a/new.html
+++ b/new.html
@@ -47,19 +47,19 @@
     <form id="form" method="POST" enctype="multipart/form-data">
       <div class="row mt-5">
         <div class="col-5 mx-auto">
-            <div class="col-12">
+            <div class="col-12 mb-3">
                 <label for="name" class="form-label">Trademark</label>
                 <input type="text" class="form-control" name="name" />
               </div>
-          <div class="col-12">
+          <div class="col-12 mb-3">
             <label for="description" class="form-label">Description</label>
             <input type="text" class="form-control" name="description" />
           </div>
-          <div class="col-12">
+          <div class="col-12 mb-3">
             <label for="color" class="form-label">Color</label>
             <input type="text" class="form-control" name="color" />
           </div>
-          <div class="col-12">
+          <div class="col-12 mb-3">
             <label for="price" class="form-label">Price</label>
             <input type="number" class="form-control" name="price" />
           </div>
